[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["VitorAndreSilva <alunovitorandre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
whitenoise = "^6.8.2"
djangorestframework = "^3.15.2"
flake8 = "^7.1.1"
djangorestframework-simplejwt = "^5.4.0"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
